# arinc429_utils

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/arinc429/: arinc429.h
test/: CMakeLists.txt  sandbox.cpp  tests.cpp
